style.css
/* FONTS */

@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');


/* GENERAL & TYPOGRAPHY */

:root {
    --primary-green: #3de07e;
    --primary-red: #e83f57;
    --primary-dark-grey: #202123;
}

body {
    font-family: "Fira Sans", sans-serif;
    margin: 0;
    padding: 0;
    background-color: black;
    color: white;
    box-sizing: border-box;
}

h1,
h2,
h3,
p {
    margin: 1rem 0;
}

h1 {
    font-size: 6rem;
    font-family: "Roboto", sans-serif;
}

h2 {
    font-size: 3rem;
    font-family: "Roboto", sans-serif;
}

h3 {
    font-size: 2.2rem;
}

a {
    color: white;
    text-decoration: none;
}

a.button-link {
    background-color: var(--primary-red);
    padding: 0.5rem 1rem;
    margin: 0;
    font-size: 0.8rem;
    font-weight: bold;
    border-radius: 0.2rem;
    display: inline-block;
}


/* HEADER */
header {
    background-color: var(--primary-green);
    height: 38rem;
    display: grid;
    grid-template-columns: 1fr;
    justify-items: center;
    align-content: space-between;
}

header img.icon {
    width: 1.5rem;
    height: 1.5rem;
    margin: 2rem;
    justify-self: start;
}

header h1 {
    color: var(--primary-dark-grey);
    text-align: center;
}

/* MAIN CONTENT */

main {
    max-width: 64rem;
    margin: auto;
}
main > article {
    margin: 6rem 1.5rem;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    gap: 2rem;
    justify-content: center;
}


/* CARDS */

.card {
    grid-column: span 2;
}

.card img {
    width: 100%;
}

.card p {
    line-height: 1.5;
    margin-bottom: 3rem;

}


/* BIG CARDS */

.card.big {
    grid-column: span 3;
    background-color: white;
    color: var(--primary-dark-grey);
}

.cards .card.big {
    margin-top: 4rem;
}

.card.big .card-caption {
    padding: 1rem;
}
.card.big .card-caption a.button-link {
    padding: 1rem 1.5rem;
}


/* CHECKOUT */

main>article>h2 {
    grid-column: span 6;
    margin: 0;
}

.checkout .shopping-cart {
    grid-column: span 6;
    display: grid;
    grid-template-areas: "heading-vara heading-vara heading-vara heading-antal heading-antal heading-pris"
                         "first-vara   first-vara   first-vara   first-antal   .             first-pris"
                         "second-vara  second-vara  second-vara  second-antal  .             second-pris"
                         "total        total        total        total         total         total-pris";

    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: min-content;
    justify-content: center;
    margin-top: 4rem;
}

.shopping-cart p.heading.vara { grid-area: heading-vara;}
.shopping-cart p.heading.antal { grid-area: heading-antal;}
.shopping-cart p.heading.pris { grid-area: heading-pris;}

.shopping-cart p.first.vara { grid-area: first-vara;}
.shopping-cart p.first.antal { grid-area: first-antal;}
.shopping-cart p.first.pris { grid-area: first-pris;}

.shopping-cart p.second.vara { grid-area: second-vara;}
.shopping-cart p.second.antal { grid-area: second-antal;}
.shopping-cart p.second.pris { grid-area: second-pris;}

.shopping-cart p.total { grid-area: total;}
.shopping-cart p.total.pris { grid-area: total-pris;}

.shopping-cart p {
    font-size: 1.5rem;
    margin: 1rem 0;
}
.shopping-cart p.heading {
    background-color: #340809;
    font-size: 1rem;
    margin: 0;
    padding: 0.5rem 0;
}

.shopping-cart p.total {
    border-top: white solid 1px;
    padding-top: 1.5rem;
}


.checkout a.button-link.buy {
    margin-top: 4rem;
    padding: 1rem;
    font-size: 1.5rem;
    grid-column: span 6;
    text-align: center;
    justify-self: end;
    align-self: center;
}


/* FOOTER */

footer {
    background-color: var(--primary-dark-grey);
    padding: 3rem 1.5rem 6rem 1.5rem;
}

.contact-and-links {
    max-width: 64rem;
    margin: auto;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    gap: 2rem;
    justify-content: center;
}

.contact-and-links section {
    grid-column: span 2;
}

.contact-and-links section.navigation a {
    display: block;
    line-height: 1.5;
}

.contact-and-links section.navigation a:hover {
    text-decoration: underline;
}

.contact-and-links section.address address {
    font-style: normal;
    line-height: 1.5;
}

.contact-and-links section.social-media a {
    display: inline-block;
    margin-right: 0.8rem;
    margin-bottom: 0.8rem;
    height: 2rem;
    width: 2rem;
}

@media screen and (max-width: 768px) {
    .card {
        grid-column: span 3;
    }

    .card.big {
        grid-column: span 6;
    }

    .shopping-cart p {
        font-size: 1.2rem;
    }

    .shopping-cart p.heading {
        font-size: 0.9rem;
    }

    .contact-and-links section {
        grid-column: span 3;
    }
    .contact-and-links section.social-media {
        grid-column: span 6;
    }

}

@media screen and (max-width: 480px) {
    h1 {
        font-size: 5rem;
    }
    .card {
        grid-column: span 6;
    }

}

